--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>BCF Consulting</title>
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="styles/main.css">
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+</head>
+<body>
+	<header>
+	<nav>
+		<ul>
+			<li>Home</li>
+			<li>Services Provided</li>
+			<li>About Us</li>
+			<li>Contact Us</li>
+		</ul>
+	</header>
+</body>
 </html>
