Added new files and made some code changes
Added about.html, contact.html, services.html, made some changes to
index.html and main.css

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
 	<title>BCF Consulting</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
 <body>
 	<header>
-	<nav>
-		<ul>
-			<li>Home</li>
-			<li>Services Provided</li>
-			<li>About Us</li>
-			<li>Contact Us</li>
-		</ul>
+		<h1>Booker Consulting Firm</h1>
 	</header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="services.html">Services Provided</a></li>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
 </body>
 </html>
