Pages now have basic layout
Added basic template to each page, basic content for services.html, also
the name of business is changed

--- a/about.html
+++ b/about.html
@@ -1,3 +1,40 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+	<meta charset="utf-8">
+	<title>Booker Career and Consulting Services</title>
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
+	<header>
+		<img src="" alt="">
+			<h1>Booker Career and Consulting Services</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="services.html">Services Provided</a></li>
+			<li><a href="about.html" class="current">About Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+	</nav>
+	<section>
+		
+	</section>
+	<aside>
+		
+	</aside>
+	<footer>
+		<p>
+			<script type="text/javascript">
+				var today = new Date();
+				document.write("&copy; &nbsp;");
+				document.write(today.getFullYear());
+				document.write(", Booker Career and Consulting Services");
+			</script>
+		</p>		
+	</footer>
+</body>
 </html>
