--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>BCF Consulting</title>
+	<meta charset="utf-8">
+	<title>Booker Career and Consulting Services</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 	<header>
-		<h1>Booker Consulting Firm</h1>
+		<img src="" alt="">
+			<h1>Booker Career and Consulting Services</h1>
 	</header>
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="services.html">Services Provided</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-			</ul>
+	<nav>
+		<ul>
+			<li><a href="index.html" class="current">Home</a></li>
+			<li><a href="services.html">Services Provided</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+	</nav>
+	<section id="bwpro_background" class="overlay_text">
+		<h3>BCF is a preparation consultancy firm specializing in an array of HR services to help individuals or businesses to achieve current or future business goals.</h3>
+		<h4>The core sectors of expertise is divided into two areas:</h4>
+		<ul>
+			<li>Career Development Services for the employed and unemployed</li>
+			<li>HR consulting services for start-ups, small businesses, and non-profit agencies</li>
+		</ul>
+	</section>
+	<aside>
+		
+	</aside>
+	<footer>
+		<p>
+			<script type="text/javascript">
+				var today = new Date();
+				document.write("&copy; &nbsp;");
+				document.write(today.getFullYear());
+				document.write(", Booker Career and Consulting Services");
+			</script>
+		</p>		
+	</footer>
 </body>
 </html>
