Nearly finished site
Added link to LinkedIn profile on "About Us" page that opens in new tab
Removed unused <aside> tags from each page
Contact page info added
Added link to "Services Provided" page on Home overlay
Added gradient, shadow, and rounded edges to <header>
About Us text is now in <article> tags
Changed HTML background to silver
Each page has unique title in <head>
Removed unused <img> element from <header>
Added alt attribute to picture of Mecoe Booker on "About Us" page
Added border radius to <body>, <section>, and bwpro_background in CSS

There are probably more changes that I forgot

--- a/about.html
+++ b/about.html
@@ -3,29 +3,41 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Booker Career and Consulting Services</title>
+	<meta name="description" content="Booker Career and Consulting Services | About Us">
+	<meta name="keywords" content="hr consultant, hr consultancy, hrm, human resources, o'fallon illinois, mecoe booker, about us, about">
+	<title>Booker Career and Consulting Services | About Us</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
 <body>
 	<header>
-		<img src="" alt="">
 			<h1>Booker Career and Consulting Services</h1>
+			<q><i>Providing HR services for your individual or business needs.</i></q>
 	</header>
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="services.html">Services Provided</a></li>
-			<li><a href="about.html" class="current">About Us</a></li>
+			<li><a href="about.html" class="active_nav">About Us</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
 	<section>
-		
+		<h2>About Us</h2>
+		<article>
+				<p>Mecoe A. Booker, MHRM, is a Human Resources professional with over 10 years of diverse experience aligning HR Strategy and Initiatives to global business objectives. She has a strong employment law background educating and supporting leaders to mitigate employment related risk. Mecoe uses HR Analytics to diagnose people issues and partner with leaders to create solutions. Mecoe's passion is to cultivate a workforce to increase employee engagement as she believes that people are the most important asset in the workplace. Current and past responsibilities include Workforce Planning and Staffing, HR Advisory, Employee Relations, Business and Financial Analysis, Training and Development, Change Management, and Diversity and Inclusion. Mecoe has a Master's Degree in Human Resource Management and a Certification in Applied Management and Law. Mecoe has a proven track record of delivering success by utilizing theoretic principles mixed with her corporate and field experiences. She has achieved success in the non-profit sector, in multi-billion dollar corporations, and for the Fortune 1 employer of the world.</p>
+		</article>
+			<figure>
+				<img src="images/mecoebooker.png" alt="Mecoe Booker image">
+				<h3>
+					Mecoe A. Booker<br>
+					MHRM<br>
+					Founder and Owner<br><br>
+				</h3>
+				<a href="https://www.linkedin.com/profile/view?id=19265085" target="_blank" alt="Link to Mecoe Booker's LinkedIn profile"><img src="images/linkedin.png"></a>
+			</figure>
 	</section>
-	<aside>
-		
-	</aside>
 	<footer>
 		<p>
 			<script type="text/javascript">
