--- a/contact.html
+++ b/contact.html
@@ -3,29 +3,36 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Booker Career and Consulting Services</title>
+	<meta name="description" content="Booker Career and Consulting Services | Contact Us">
+	<meta name="keywords" content="hr consultant, hr consultancy, hrm, human resources, o'fallon illinois, mecoe booker, contact, contact us, email, phone, phone number">
+	<title>Booker Career and Consulting Services | Contact Us</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
 <body>
 	<header>
-		<img src="" alt="">
 			<h1>Booker Career and Consulting Services</h1>
+			<q><i>Providing HR services for your individual or business needs.</i></q>
 	</header>
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="services.html">Services Provided</a></li>
 			<li><a href="about.html">About Us</a></li>
-			<li><a href="contact.html" class="current">Contact Us</a></li>
+			<li><a href="contact.html" class="active_nav">Contact Us</a></li>
 		</ul>
 	</nav>
 	<section>
-		
+		<h2>Contact Us</h2>
+				<p>For pricing information regarding your specific services, please contact me via<br></p>
+				<ul>
+					<li>E-mail: <a href="mailto:bcfconsulting1@yahoo.com"><b>bcfconsulting1@yahoo.com</b></a></li>
+					<li>Phone: <b>618-407-9325</b></li>
+				</ul><br>
+				<p>Please leave me a message so I can help. All inquiries will be returned within 2 	business days or sooner.</p><br>
+				<p>Feedback is a gift! We are always pleased to hear from individuals that can provide insight to helping us grow by providing more services to fit your needs.</p><br><br>
 	</section>
-	<aside>
-		
-	</aside>
 	<footer>
 		<p>
 			<script type="text/javascript">
