--- a/index.html
+++ b/index.html
@@ -3,34 +3,39 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Booker Career and Consulting Services</title>
+	<meta name="description" content="Booker Career and Consulting Services | Homepage">
+	<meta name="keywords" content="hr consultant, hr consultancy, hrm, human resources, o'fallon illinois, mecoe booker, homepage">
+	<title>Booker Career and Consulting Services | Home</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
 <body>
 	<header>
-		<img src="" alt="">
 			<h1>Booker Career and Consulting Services</h1>
+			<q><i>Providing HR services for your individual or business needs.</i></q>
 	</header>
 	<nav>
 		<ul>
-			<li><a href="index.html" class="current">Home</a></li>
+			<li><a href="index.html" class="active_nav">Home</a></li>
 			<li><a href="services.html">Services Provided</a></li>
 			<li><a href="about.html">About Us</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
-	<section id="bwpro_background" class="overlay_text">
-		<h3>BCF is a preparation consultancy firm specializing in an array of HR services to help individuals or businesses to achieve current or future business goals.</h3>
-		<h4>The core sectors of expertise is divided into two areas:</h4>
-		<ul>
-			<li>Career Development Services for the employed and unemployed</li>
-			<li>HR consulting services for start-ups, small businesses, and non-profit agencies</li>
-		</ul>
+	<section>
+		<div id="bwpro_background">
+		<div class="overlay_text">
+			<h2><strong>Booker Career and Consulting Services</strong> is a preparation consultancy firm specializing in an array of HR services to help individuals or businesses to achieve current or future goals.</h2>
+			<h4>The core sectors of our expertise is divided into two areas:</h4>
+			<ul>
+				<li>Career Development Services for the employed and unemployed</li>
+				<li>HR consulting services for start-ups, small businesses, and non-profit agencies</li>
+			</ul><br>
+			<h5>Go to the <a href="services.html">Services Provided</a> page to learn more!</h5>
+		</div>
+		</div>
 	</section>
-	<aside>
-		
-	</aside>
 	<footer>
 		<p>
 			<script type="text/javascript">
