--- a/services.html
+++ b/services.html
@@ -3,59 +3,58 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Booker Career and Consulting Services</title>
+	<meta name="description" content="Booker Career and Consulting Services | Services Provided">
+	<meta name="keywords" content="hr consultant, hr consultancy, hrm, human resources, o'fallon illinois, mecoe booker, services, services provided">
+	<title>Booker Career and Consulting Services | Services Provided</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
 <body>
 	<header>
-		<img src="" alt="">
 			<h1>Booker Career and Consulting Services</h1>
+			<q><i>Providing HR services for your individual or business needs.</i></q>
 	</header>
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="services.html" class="current">Services Provided</a></li>
+			<li><a href="services.html" class="active_nav">Services Provided</a></li>
 			<li><a href="about.html">About Us</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
 	<section>
 		<h2>What We Do</h2>
-		<p>BCF is a company that provides multiple advisory services to individuals or businesses</p>
-		<br>
-		<p>For individuals, whether you are underemployed and looking to sharpen your skills to get that next promotion or unemployed due to layoffs, government sequestration, or other life changing events, BCF can provide career preparation assistance with the hopes of obtaining employment. BCF assists with drafting resumes and cover letters, teaching interviewing etiquette and mock interviews, job application and testing assistance, and overall career advisement. BCF can also assist with finding employment opportunities based on your aspirations based on your experience level.</p>
-		<br>
-		<p>For businesses, BCF offers a wide variety of HR services to start-ups, small established businesses, or non-profit organizations to help with the overall HR effectiveness in your organization.  BCF can provide HR advisory regarding streamlining your full cycle recruitment process, design Performance Management tools to improve productivity including HR Analytics/Metrics, conduct independent analysis of your Human Resources functions, conduct independent high risk investigations, design tools to help you monitor productivity and a host of other services to improve people functions within your organization.<p>
-		<br>
+			<p>BCF is a company that provides multiple advisory services to individuals or businesses</p><br>
+			<p>For individuals, whether you are under-employed and looking to sharpen your skills to get that next promotion or unemployed due to layoffs, government sequestration, or other life changing events, BCF can provide career preparation assistance with the hopes of obtaining employment. BCF assists with drafting resumes and cover letters, teaching interviewing etiquette and mock interviews, job application and testing assistance, and overall career advisement. BCF can also assist with finding employment opportunities based on your aspirations based on your experience level.</p><br>
+			<p>For businesses, BCF offers a wide variety of HR services to start-ups, small established businesses, or non-profit organizations to help with the overall HR effectiveness in your organization.  BCF can provide HR advisory regarding streamlining your full cycle recruitment process, design Performance Management tools to improve productivity including HR Analytics/Metrics, conduct independent analysis of your Human Resources functions, conduct independent high risk investigations, design tools to help you monitor productivity and a host of other services to improve people functions within your organization.<p><br><br>
 		<h2>Career Preparation For Job Seekers</h2>
-		<h4>Interviewing Etiquette and Techniques</h4>
-		<p>90 minute interactive session to polish your interviewing skills as you get prepared for the big day</p>
-		<h4>Cover Letter and Resume Writing</h4>
-		<p>Build a document highlighting your best attributes, competencies and experiences</p>
-		<h4>Job Application and Testing</h4>
-		<p>Assist with job applications and teaching the methodology behind behavioral based testing</p>
-		<h4>Career Coaching</h4>
-		<p>Provide assistance to help you with designing your own career path.</p>
+			<h4>Interviewing Etiquette and Techniques</h4>
+				<p>90 minute interactive session to polish your interviewing skills as you get prepared for the big day</p><br>
+			<h4>Cover Letter and Resume Writing</h4>
+				<p>Build a document highlighting your best attributes, competencies and experiences</p><br>
+			<h4>Job Application and Testing</h4>
+				<p>Assist with job applications and teaching the methodology behind behavioral based testing</p><br>
+			<h4>Career Coaching</h4>
+				<p>Provide assistance to help you with designing your own career path</p><br><br>
 		<h2>HR Consultancy Services</h2>
-		<ul>
-			<li>Job description creation</li>
-			<li>HR Audits</li>
-			<li>Standard Operating Procedures (SOPs)</li>
-			<li>PowerPoint Presentations</li>
-			<li>Performance Management Forms and Tools</li>
-			<li>Career Development Plans</li>
-			<li>Succession Planning</li>
-			<li>Creating Staff Models</li>
-			<li>Create Personnel Manuals</li>
-			<li>Organization Design</li>
-			<li>HR Investigations</li>
-			<li>Benefits and Compensation</li>
-		</ul>
+		<article>
+			<ul>
+				<li>Job Description Creation</li>
+				<li>HR Audits</li>
+				<li>Standard Operating Procedures (SOPs)</li>
+				<li>PowerPoint Presentations</li>
+				<li>Performance Management Forms and Tools</li>
+				<li>Career Development Plans</li>
+				<li>Succession Planning</li>
+				<li>Creating Staff Models</li>
+				<li>Create Personnel Manuals</li>
+				<li>Organization Design</li>
+				<li>HR Investigations</li>
+				<li>Benefits and Compensation</li>
+			</ul>
+		</article>
 	</section>
-	<aside>
-
-	</aside>
 	<footer>
 		<p>
 			<script type="text/javascript">
