--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
+<!-- Michael Hanna and Kyle Liechty: CMIS 300, Project 2: Client Web Site -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Booker Career and Consulting Services | About Us">
+	<meta name="description" content="Booker Career and Consulting Services is a preparation consultancy firm specializing in an array of HR services to help individuals or businesses to achieve current or future goals.">
 	<meta name="keywords" content="hr consultant, hr consultancy, hrm, human resources, o'fallon illinois, mecoe booker, about us, about">
 	<title>Booker Career and Consulting Services | About Us</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
@@ -35,7 +36,7 @@
 					MHRM<br>
 					Founder and Owner<br><br>
 				</h3>
-				<a href="https://www.linkedin.com/profile/view?id=19265085" target="_blank" alt="Link to Mecoe Booker's LinkedIn profile"><img src="images/linkedin.png"></a>
+				<a href="https://www.linkedin.com/profile/view?id=19265085" target="_blank" ><img src="images/linkedin.png" alt="Link to Mecoe Booker's LinkedIn profile"></a>
 			</figure>
 	</section>
 	<footer>
