--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!-- Michael Hanna and Kyle Liechty: CMIS 300, Project 2: Client Web Site -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Booker Career and Consulting Services | Homepage">
+	<meta name="description" content="Booker Career and Consulting Services is a preparation consultancy firm specializing in an array of HR services to help individuals or businesses to achieve current or future goals.">
 	<meta name="keywords" content="hr consultant, hr consultancy, hrm, human resources, o'fallon illinois, mecoe booker, homepage">
 	<title>Booker Career and Consulting Services | Home</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
