--- a/services.html
+++ b/services.html
@@ -1,9 +1,10 @@
+<!-- Michael Hanna and Kyle Liechty: CMIS 300, Project 2: Client Web Site -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Booker Career and Consulting Services | Services Provided">
+	<meta name="description" content="Booker Career and Consulting Services is a preparation consultancy firm specializing in an array of HR services to help individuals or businesses to achieve current or future goals.">
 	<meta name="keywords" content="hr consultant, hr consultancy, hrm, human resources, o'fallon illinois, mecoe booker, services, services provided">
 	<title>Booker Career and Consulting Services | Services Provided</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
@@ -25,9 +26,11 @@
 	</nav>
 	<section>
 		<h2>What We Do</h2>
-			<p>BCF is a company that provides multiple advisory services to individuals or businesses</p><br>
-			<p>For individuals, whether you are under-employed and looking to sharpen your skills to get that next promotion or unemployed due to layoffs, government sequestration, or other life changing events, BCF can provide career preparation assistance with the hopes of obtaining employment. BCF assists with drafting resumes and cover letters, teaching interviewing etiquette and mock interviews, job application and testing assistance, and overall career advisement. BCF can also assist with finding employment opportunities based on your aspirations based on your experience level.</p><br>
-			<p>For businesses, BCF offers a wide variety of HR services to start-ups, small established businesses, or non-profit organizations to help with the overall HR effectiveness in your organization.  BCF can provide HR advisory regarding streamlining your full cycle recruitment process, design Performance Management tools to improve productivity including HR Analytics/Metrics, conduct independent analysis of your Human Resources functions, conduct independent high risk investigations, design tools to help you monitor productivity and a host of other services to improve people functions within your organization.<p><br><br>
+			<article>
+				<p>BCF is a company that provides multiple advisory services to individuals or businesses</p><br>
+				<p>For individuals, whether you are under-employed and looking to sharpen your skills to get that next promotion or unemployed due to layoffs, government sequestration, or other life changing events, BCF can provide career preparation assistance with the hopes of obtaining employment. BCF assists with drafting resumes and cover letters, teaching interviewing etiquette and mock interviews, job application and testing assistance, and overall career advisement. BCF can also assist with finding employment opportunities based on your aspirations based on your experience level.</p><br>
+				<p>For businesses, BCF offers a wide variety of HR services to start-ups, small established businesses, or non-profit organizations to help with the overall HR effectiveness in your organization.  BCF can provide HR advisory regarding streamlining your full cycle recruitment process, design Performance Management tools to improve productivity including HR Analytics/Metrics, conduct independent analysis of your Human Resources functions, conduct independent high risk investigations, design tools to help you monitor productivity and a host of other services to improve people functions within your organization.<p>
+			</article>
 		<h2>Career Preparation For Job Seekers</h2>
 			<h4>Interviewing Etiquette and Techniques</h4>
 				<p>90 minute interactive session to polish your interviewing skills as you get prepared for the big day</p><br>
@@ -36,7 +39,7 @@
 			<h4>Job Application and Testing</h4>
 				<p>Assist with job applications and teaching the methodology behind behavioral based testing</p><br>
 			<h4>Career Coaching</h4>
-				<p>Provide assistance to help you with designing your own career path</p><br><br>
+				<p>Provide assistance to help you with designing your own career path</p>
 		<h2>HR Consultancy Services</h2>
 		<article>
 			<ul>
